[gd_scene load_steps=6 format=3 uid="uid://bou3d0fyt567u"]

[ext_resource type="Script" path="res://main_ui.gd" id="1_cio0b"]
[ext_resource type="Theme" uid="uid://tdwt561v3cyk" path="res://text.tres" id="2_cm5rv"]

[sub_resource type="Animation" id="Animation_8g6em"]
resource_name = "Bounce and tit"
length = 4.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1, 2, 3, 4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [-0.174533, 0.0, 0.174533, 0.0, -0.174533]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_umj4t"]
_data = {
"Bounce and tit": SubResource("Animation_8g6em")
}

[sub_resource type="GDScript" id="GDScript_eb2t1"]

[node name="MainUi" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_cio0b")

[node name="StartButton" type="Button" parent="."]
layout_mode = 0
anchor_left = 0.5
anchor_right = 0.5
offset_left = -76.0
offset_right = 76.0
offset_bottom = 64.0
grow_horizontal = 2
text = "Start!"
metadata/_edit_layout_mode = 1

[node name="RaffleWord" type="LineEdit" parent="."]
layout_mode = 0
anchor_left = 0.5
anchor_right = 0.5
offset_left = -200.0
offset_top = 136.0
offset_right = 200.0
offset_bottom = 192.0
grow_horizontal = 2
placeholder_text = "Raffle Word!"
metadata/_edit_layout_mode = 1

[node name="Winner" type="Label" parent="."]
layout_mode = 0
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -198.0
offset_top = -91.008
offset_right = 185.0
offset_bottom = -55.002
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_cm5rv")
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 4
horizontal_alignment = 1
metadata/_edit_layout_mode = 1

[node name="RaffleWordLabel" type="Label" parent="."]
layout_mode = 0
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -400.0
offset_top = -104.0
offset_right = 400.0
offset_bottom = 104.0
grow_horizontal = 2
grow_vertical = 2
rotation = -0.174533
pivot_offset = Vector2(400, 104)
theme = ExtResource("2_cm5rv")
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 5
theme_override_font_sizes/font_size = 45
text = "Raffle Word:
Bounce"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_layout_mode = 1

[node name="Bounce" type="AnimationPlayer" parent="RaffleWordLabel"]
speed_scale = 3.0
libraries = {
"": SubResource("AnimationLibrary_umj4t")
}

[node name="CountDownLabel" type="Label" parent="."]
visible = false
layout_mode = 0
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -400.0
offset_top = -104.0
offset_right = 400.0
offset_bottom = 104.0
grow_horizontal = 2
grow_vertical = 2
rotation = 0.0141034
pivot_offset = Vector2(400, 104)
theme = ExtResource("2_cm5rv")
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 5
theme_override_font_sizes/font_size = 90
text = "5"
horizontal_alignment = 1
vertical_alignment = 1
script = SubResource("GDScript_eb2t1")

[connection signal="pressed" from="StartButton" to="." method="_on_menu_button_pressed"]
[connection signal="text_submitted" from="RaffleWord" to="." method="_on_raffle_word_text_submitted"]
